test/should-fail/vsgc869.f3
/**
 * Should-fail test for VSGC-869 - Visibility of catch-parameter
 * This script should fail during compilation.
 *
 * @test
 * @compile/fail vsgc869.f3
 */

import java.lang.Exception;
import java.lang.System;

try {
   throw new Exception();
}
catch (ex: java.lang.Exception) {
   System.out.println("I'm here {ex} ");
}

// The following line should result in error
System.out.println("I'm here {ex} ");
